--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/main_layout_cards"
         android:layout_width="wrap_content"
-        android:layout_height="300dp">
+        android:layout_height="250dp">
 
         <LinearLayout
             android:id="@+id/main_layout_left_player"
@@ -90,6 +90,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/main_layout_Button"
         android:layout_width="63dp"
         android:layout_height="63dp"
         android:layout_below="@+id/main_layout_cards"
