--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -23,11 +23,12 @@
             android:layout_gravity="center">
 
             <TextView
+                android:id="@+id/main_layout_player1_score"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="25dp"
                 android:gravity="center"
-                android:text="8"
+                android:text="0"
                 android:textSize="40dp"
                 android:textColor="@color/black" />
 
@@ -69,6 +70,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/main_layout_player2_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
