--- a/app/src/main/res/layout/activity_second_page.xml
+++ b/app/src/main/res/layout/activity_second_page.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/AliceBlue">
-
-    <LinearLayout
-        android:id="@+id/main_layout_cards"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:background="@color/AliceBlue"
+    android:orientation="vertical">
 
         <TextView
             android:id="@+id/promptWinner"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="20dp"
             android:layout_margin="20dp"
+            android:layout_marginStart="44dp"
+            android:padding="20dp"
             android:text="TextView"
-            android:maxLines="1"
-            android:textStyle="bold"
             android:textColor="@color/black"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/winnerAvatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/winnerAvatar"
-            android:layout_width="0dp"
-            android:layout_height="400dp"
-            android:layout_weight="1"
+            android:layout_width="361dp"
+            android:layout_height="383dp"
             android:layout_margin="25dp"
-            android:layout_gravity="center_horizontal">
         </ImageView>
+            android:layout_gravity="center_horizontal">
+            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/promptWinner"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/batman"
 
-
-    </LinearLayout></RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
