--- a/app/src/main/res/layout/activity_second_page.xml
+++ b/app/src/main/res/layout/activity_second_page.xml
@@ -30,12 +30,11 @@
             android:layout_width="361dp"
             android:layout_height="383dp"
             android:layout_margin="25dp"
-        </ImageView>
-            android:layout_gravity="center_horizontal">
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/promptWinner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/batman"
+            android:src="@drawable/batman"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
