--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -50,7 +50,7 @@
         android:layout_margin="25dp"
         android:layout_marginStart="14dp"
         android:layout_weight="1"
-        android:src="@drawable/poker_a_1"
+        android:src="@drawable/start_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/main_IMG_card2"
         app:layout_constraintHorizontal_bias="1.0"
@@ -66,7 +66,7 @@
         android:layout_margin="25dp"
         android:layout_marginStart="14dp"
         android:layout_weight="1"
-        android:src="@drawable/poker_a_2"
+        android:src="@drawable/start_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/main_IMG_card1"
         app:layout_constraintTop_toTopOf="parent"
