--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -6,8 +6,19 @@
     android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Wheat"
+    android:background="@color/Honeydew"
     >
+
+    <ProgressBar
+        android:id="@+id/main_PB"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:progress="0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/main_layout_left_player"
@@ -21,7 +32,7 @@
         app:layout_constraintEnd_toStartOf="@id/main_IMG_card1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.235">
+        app:layout_constraintVertical_bias="0.496">
 
         <TextView
             android:id="@+id/main_layout_player1_score"
@@ -42,6 +53,7 @@
             android:src="@drawable/spiderman" />
 
     </LinearLayout>
+
     <ImageView
         android:id="@+id/main_IMG_card1"
         android:layout_width="123dp"
@@ -56,7 +68,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/main_layout_left_player"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08" />
+        app:layout_constraintVertical_bias="0.368" />
 
     <ImageView
         android:id="@+id/main_IMG_card2"
@@ -68,10 +80,10 @@
         android:layout_weight="1"
         android:src="@drawable/start_card"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/main_layout_right_player"
         app:layout_constraintStart_toEndOf="@id/main_IMG_card1"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/main_layout_right_player"
-        app:layout_constraintVertical_bias="0.081" />
+        app:layout_constraintVertical_bias="0.368" />
 
     <LinearLayout
         android:id="@+id/main_layout_right_player"
@@ -85,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/main_IMG_card2"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.235">
+        app:layout_constraintVertical_bias="0.509">
 
         <TextView
             android:id="@+id/main_layout_player2_score"
@@ -119,6 +131,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95" />
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
