--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -18,7 +18,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:max="26"/>
 
     <LinearLayout
         android:id="@+id/main_layout_left_player"
