--- a/app/src/main/res/layout/activity_second_page.xml
+++ b/app/src/main/res/layout/activity_second_page.xml
@@ -11,10 +11,11 @@
 
         <TextView
             android:id="@+id/promptWinner"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_marginStart="44dp"
+            android:gravity="center"
             android:padding="20dp"
             android:text="TextView"
             android:textColor="@color/black"
