--- a/app/src/main/res/layout/activity_last_page.xml
+++ b/app/src/main/res/layout/activity_last_page.xml
@@ -8,11 +8,13 @@
     android:background="@color/Honeydew"
     >
 
-    <TextView
-        android:id="@+id/last_TV_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="this is the topten and map screen"
+    <FrameLayout
+        android:id="@+id/TOP_FRAGMENT_MAP"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_margin="24dp"
+        android:background="#45454545"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
