--- a/app/src/main/res/layout/activity_last_page.xml
+++ b/app/src/main/res/layout/activity_last_page.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,15 +10,25 @@
     >
 
     <FrameLayout
+        android:id="@+id/TOP_FRAGMENT_TABLE"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.4"
+        android:layout_margin="24dp"
+        android:background="#45454545"
+        app:layout_constraintTop_toTopOf="parent" >
+    </FrameLayout>
+
+    <FrameLayout
         android:id="@+id/TOP_FRAGMENT_MAP"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.5"
         android:layout_weight="1"
         android:layout_margin="24dp"
         android:background="#45454545"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias="0.496">
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
