--- a/app/src/main/res/layout/activity_last_page.xml
+++ b/app/src/main/res/layout/activity_last_page.xml
@@ -7,28 +7,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Honeydew"
+    android:orientation="horizontal"
     >
 
     <FrameLayout
         android:id="@+id/TOP_FRAGMENT_TABLE"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.4"
         android:layout_margin="24dp"
-        android:background="#45454545"
-        app:layout_constraintTop_toTopOf="parent" >
-    </FrameLayout>
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/TOP_FRAGMENT_MAP"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        ></FrameLayout>
 
     <FrameLayout
         android:id="@+id/TOP_FRAGMENT_MAP"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.5"
-        android:layout_weight="1"
         android:layout_margin="24dp"
-        android:background="#45454545"
+        android:layout_weight="1"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.496">
-    </FrameLayout>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintStart_toStartOf="parent"></FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
