--- a/app/src/main/res/layout/activity_card_game.xml
+++ b/app/src/main/res/layout/activity_card_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -46,12 +46,13 @@
             android:textSize="40dp" />
 
         <ImageView
+            android:id="@+id/IMV_firstPlayer"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="25dp"
             android:scaleType="fitXY"
-            android:src="@drawable/spiderman" />
+             />
 
     </LinearLayout>
 
@@ -63,7 +64,6 @@
         android:layout_margin="25dp"
         android:layout_marginStart="14dp"
         android:layout_weight="1"
-        android:src="@drawable/start_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/main_IMG_card2"
         app:layout_constraintHorizontal_bias="1.0"
@@ -79,7 +79,6 @@
         android:layout_margin="25dp"
         android:layout_marginStart="14dp"
         android:layout_weight="1"
-        android:src="@drawable/start_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/main_layout_right_player"
         app:layout_constraintStart_toEndOf="@id/main_IMG_card1"
@@ -111,12 +110,13 @@
             android:textSize="40dp" />
 
         <ImageView
+            android:id="@+id/IMV_secondPlayer"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="25dp"
             android:scaleType="fitXY"
-            android:src="@drawable/batman" />
+             />
 
     </LinearLayout>
 
@@ -127,7 +127,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_margin="20dp"
         android:padding="16dp"
-        android:src="@drawable/play_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -163,4 +162,20 @@
         app:layout_constraintStart_toEndOf="@id/main_layout_Button"
         app:layout_constraintTop_toBottomOf="@id/main_layout_left_player"
         app:layout_constraintVertical_bias="0.255" />
+
+    <TextView
+        android:id="@+id/main_TV_frase"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:text="LETS WAIT AND SEE"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.938" />
 </androidx.constraintlayout.widget.ConstraintLayout>
